--- a/MazesAndMinotaurs/app/src/main/res/layout-xlarge/fragment_character_creator.xml
+++ b/MazesAndMinotaurs/app/src/main/res/layout-xlarge/fragment_character_creator.xml
@@ -56,7 +56,7 @@
                 android:layout_columnSpan="3"
                 android:layout_row="2"
                 android:layout_rowSpan="3"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <RadioButton
                     android:id="@+id/amazon_radio"
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Barbarians"
-                    android:textSize="30dp" />
+                    android:textSize="30dp"/>
 
                 <RadioButton
                     android:id="@+id/centaur_radio"
@@ -96,12 +96,12 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Spearmen"
-                    android:textSize="30dp" />
+                    android:textSize="30dp"/>
 
             </RadioGroup>
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/magician_button"
                 android:layout_width="268dp"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
@@ -211,7 +211,7 @@
             </RadioGroup>
 
             <ImageButton
-                android:id="@+id/magician_button"
+                android:id="@+id/warrior_button"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
