Wiring the Character Creation fragment to the navigation drawer and button

--- a/MazesAndMinotaurs/app/src/main/res/menu/activity_main_mazes_drawer.xml
+++ b/MazesAndMinotaurs/app/src/main/res/menu/activity_main_mazes_drawer.xml
@@ -13,10 +13,14 @@
             <item
                 android:id="@+id/nav_delete_char"
                 android:title="Delete Character"/>
+
         </menu>
     </item>
 
     <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_dice"
+            android:title="Dice Roller"/>
         <item
             android:id="@+id/nav_website"
             android:title="Website"/>
