--- a/MazesAndMinotaurs/app/src/main/res/layout/content_main_mazes.xml
+++ b/MazesAndMinotaurs/app/src/main/res/layout/content_main_mazes.xml
@@ -9,10 +9,12 @@
     tools:context="com.example.cis.mnmv2.MainMazesActivity"
     tools:showIn="@layout/app_bar_main_mazes">
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="368dp"
         android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"></RelativeLayout>
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
